Allow regulators to archive projects